# sjtu-agent

./: .gitignore  AGENT.md  MCP_SKILL_UPDATE.md  README.md  README_EN.md  REFACTOR_PLAN.md  agent.py  care_check.py  config.example.json  daily_report.py  ddl_checker.py  feishu_bot.py  get_shiyuan_api.py  login.py  pyproject.toml  remind_check.py  requirements.txt  telegram_bot.py  wechat_bot.py
.github/workflows/: test.yml
agent_showcase/: index.html  styles.css
docs/: NEWS_AGGREGATOR_PLAN.md  feishu-bot-troubleshooting.md  reload-after-code-changes.md  ykst-treehole.md
docs/architecture/: agent-architecture-deep-dive.md  claude-code-agent-core-design.md  openclaw-agent-core-design.md
install/: install.ps1  install.sh  launch-feishu.bat  run_telegram_bot.sh  run_wechat_bot.sh
scripts/: care_check.py  daily_report.py  email_watcher.py  feishu_bot.py  feishu_launcher.pyw  install_parse_backends.py  mcp_server.py  news_digest.py  qq_bot.py  remind_check.py  setup_config.py  shuiyuan_watcher.py  telegram_bot.py  wechat_bot.py
sjtu_agent/: __init__.py  cli.py  config.py  homework_agent.py  matlab_util.py  overleaf_client.py  paths.py  setup_wizard.py  ykst_client.py
sjtu_agent/agent/: __init__.py  chat_loop.py  prompts.py  runner.py  tools.py
sjtu_agent/extensions/: __init__.py  mcp_client.py  registry.py  skills.py
sjtu_agent/news_aggregator/: aggregator.py
tests/: test_cli_qq_entry.py  test_config.py  test_extensions.py  test_icourse_ddl.py  test_parse_router.py  test_tools_parse_local.py  test_ykst_client.py  test_ykst_tools.py
(+16 files in other folders)
