[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sjtu-agent"
version = "0.2.0-rc5"
description = "Deployable SJTU campus agent with CLI, Telegram bot, and MCP server entrypoints."
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
sjtu-agent = "sjtu_agent.cli:main"

[tool.setuptools]
py-modules = [
  "agent",
  "ddl_checker",
  "login",
]

[tool.setuptools.packages.find]
include = ["sjtu_agent", "sjtu_agent.*"]

[tool.setuptools.package-data]
"sjtu_agent.web" = ["static/*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
